Add a way to configure an OpenSearch distribution for the Elasticsearch DevService